--- a/smalltest/smartWizard/smartwizard.html
+++ b/smalltest/smartWizard/smartwizard.html
@@ -8,7 +8,7 @@
     <link href="dist/css/smart_wizard.css" rel="stylesheet"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <style>
-
+        /*css中引用的背景图路径要写对了*/
     </style>
 </head>
 <body>
