--- a/smalltest/canvas/canvas-sign.html
+++ b/smalltest/canvas/canvas-sign.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>video</title>
     <script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+    <style>
 
+    </style>
 </head>
 <body>
 <div id="img">
