--- a/smalltest/tree.html
+++ b/smalltest/tree.html
@@ -13,10 +13,10 @@
 
         div#box {
             width: 100%;
-            height: 100%;yle>
-
+            height: 100%;
         }
-    </st<script src="http://sqimg.qq.com/qq_product_operations/mma/javanli_test/lib/three.min.js"></script>
+    </style>
+    <script src="http://sqimg.qq.com/qq_product_operations/mma/javanli_test/lib/three.min.js"></script>
 </head>
 <body onload="initThree()">
 <div id="box"></div>
